overlays/development/ops/grafana-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"      
spec:
  tls:
  - hosts:
    - edulane.info
    secretName: jitsi-messenger-schule-tls
  rules:
    - host: edulane.info
      http:
        paths:
        # only match /grafana and paths under /grafana/
        - path: /grafana(/|$)(.*)
          backend:
            serviceName: grafana
            servicePort: http
